--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-final-tree-view": "^3.0.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "5.1.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-side-drawer": "^2.1.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
