--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.70.5",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "5.1.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.18.2",
