--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
-    "axios": "1.2.0-alpha.1",
+    "axios": "^1.3.3",
     "expo": "~47.0.12",
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
@@ -23,6 +23,7 @@
     "react-native": "0.70.5",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-keychain": "^8.1.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "5.1.2",
     "react-native-safe-area-context": "4.4.1",
