--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~47.0.12",
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "lz-string": "^1.4.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
