--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 scripts-prepend-node-path=true
+//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
 @openforis:registry=https://npm.pkg.github.com
 always-auth=true
