--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@openforis/arena-core": "^0.0.129",
+    "@openforis/arena-core": "^0.0.132",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.5",
     "@react-navigation/native": "^6.1.6",
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "dotenv": "^16.0.3"
   },
   "private": true
 }
