--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
+    "expo-location": "^15.1.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "lz-string": "^1.4.4",
