--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@openforis/arena-core": "../../openforis/arena-core",
+    "@openforis/arena-core": "^0.0.138",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.5",
     "@react-navigation/native": "^6.1.6",
