--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-native-final-tree-view": "^3.0.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.1.1",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "5.2.0",
+    "react-native-paper-autocomplete": "^0.11.7",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-side-drawer": "^2.1.0",
