--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-keychain": "^8.1.1",
     "react-native-paper": "5.2.0",
     "react-native-paper-autocomplete": "^0.11.7",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.5.0",
