--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "expo-location": "^15.1.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "i18next": "^22.5.0",
     "lz-string": "^1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.3.1",
     "react-native": "0.71.3",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-final-tree-view": "^3.0.0",
