--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-final-tree-view": "^3.0.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.1.1",
-    "react-native-paper": "5.2.0",
+    "react-native-paper": "^5.8.0",
     "react-native-paper-autocomplete": "^0.11.7",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
