--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@openforis/arena-core": "^0.0.140",
+    "@openforis/arena-core": "^0.0.141",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.5",
     "@react-navigation/native": "^6.1.6",
@@ -18,6 +18,9 @@
     "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-asset": "^8.9.1",
+    "expo-camera": "~13.1.0",
+    "expo-file-system": "~15.1.1",
+    "expo-image-picker": "~14.0.2",
     "expo-location": "^15.1.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
