--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
-    "@openforis/arena-core": "^0.0.141",
+    "@openforis/arena-core": "^0.0.146",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.5",
     "@react-native-community/netinfo": "^9.3.10",
@@ -44,6 +44,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-side-drawer": "^2.1.0",
     "react-native-web": "~0.18.12",
+    "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
