--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
