--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.3.1",
     "react-native": "0.71.3",
+    "react-native-collapsible": "^1.6.1",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-get-random-values": "^1.8.0",
