--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-side-drawer": "^2.1.0",
+    "react-native-system-navigation-bar": "^2.6.1",
     "react-native-web": "~0.18.12",
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.0.5",
