--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-file-system": "~15.1.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "^15.1.1",
+    "expo-sensors": "^12.3.0",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "i18next": "^22.5.0",
