--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
-    "expo-application": "^5.3.0",
     "expo-asset": "^8.9.1",
     "expo-camera": "~13.1.0",
     "expo-file-system": "~15.1.1",
@@ -46,6 +45,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.1",
+    "react-native-version-number": "^0.3.6",
     "react-native-web": "~0.18.12",
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.0.5",
