--- a/package.json
+++ b/package.json
@@ -9,47 +9,47 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
-    "@openforis/arena-core": "^0.0.147",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "^6.7.5",
-    "@react-native-community/netinfo": "^9.3.10",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "axios": "^1.3.4",
-    "expo": "~47.0.12",
-    "expo-application": "^5.3.0",
-    "expo-asset": "^8.9.1",
-    "expo-camera": "~13.1.0",
-    "expo-file-system": "~15.1.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-location": "^15.1.1",
-    "expo-sensors": "^12.3.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@openforis/arena-core": "^0.0.149",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
+    "expo": "~48.0.18",
+    "expo-application": "~5.1.1",
+    "expo-asset": "~8.9.1",
+    "expo-camera": "~13.2.1",
+    "expo-crypto": "~12.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-image-picker": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "expo-sensors": "~12.1.1",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
-    "i18next": "^22.5.0",
-    "lz-string": "^1.4.4",
+    "i18next": "^23.2.11",
+    "lz-string": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^12.3.1",
-    "react-native": "0.71.3",
+    "react-i18next": "^13.0.2",
+    "react-native": "0.71.8",
     "react-native-collapsible": "^1.6.1",
-    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-final-tree-view": "^3.0.0",
-    "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.1.1",
-    "react-native-paper": "^5.8.0",
+    "react-native-paper": "^5.9.1",
     "react-native-paper-autocomplete": "^0.11.7",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0",
+    "react-native-screens": "~3.20.0",
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.1",
-    "react-native-web": "~0.18.12",
+    "react-native-web": "~0.18.10",
     "react-native-zip-archive": "^6.0.9",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.1",
