--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.1",
+    "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.9.1",
     "react-native-paper-autocomplete": "^0.11.7",
     "react-native-paper-dropdown": "^1.0.7",
