--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.1",
     "react-native-open-maps": "^0.4.3",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.9.1",
     "react-native-paper-autocomplete": "^0.11.7",
     "react-native-paper-dropdown": "^1.0.7",
