--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-i18next": "^13.0.2",
     "react-native": "0.71.8",
     "react-native-collapsible": "^1.6.1",
+    "react-native-dots-pagination": "^0.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.1",
