--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-asset": "~8.9.1",
     "expo-camera": "~13.2.1",
     "expo-crypto": "~12.2.1",
+    "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
