--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@miblanchard/react-native-slider": "^2.3.1",
     "@openforis/arena-core": "^0.0.153",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.1.7",
@@ -52,6 +53,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.1",
+    "react-native-toast-message": "^2.1.6",
     "react-native-version-number": "^0.3.6",
     "react-native-web": "~0.18.10",
     "react-native-zip-archive": "^6.0.9",
