added show more text to node def form item

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
+    "expo-permissions": "~14.1.1",
     "expo-sensors": "~12.1.1",
+    "expo-sharing": "~11.2.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "i18next": "^23.2.11",
@@ -54,6 +57,7 @@
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.1",
     "react-native-version-number": "^0.3.6",
+    "react-native-view-more-text": "^2.2.0",
     "react-native-web": "~0.18.10",
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.1.1",
