--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myarenamobile",
-  "version": "0.9.22",
+  "version": "0.9.24",
   "main": "AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,9 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.5",
     "@expo/webpack-config": "^18.0.1",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.157",
+    "@openforis/arena-core": "^0.0.158",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/datetimepicker": "6.7.3",
@@ -28,7 +29,9 @@
     "expo-file-system": "~15.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
+    "expo-media-library": "~15.2.3",
     "expo-sensors": "~12.1.1",
+    "expo-sharing": "~11.2.2",
     "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "i18next": "^23.2.11",
@@ -54,6 +57,7 @@
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.1",
     "react-native-version-number": "^0.3.6",
+    "react-native-view-more-text": "^2.2.0",
     "react-native-web": "~0.18.10",
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.1.1",
