--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@bam.tech/react-native-image-resizer": "^3.0.5",
     "@expo/webpack-config": "^18.0.1",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@openforis/arena-core": "^0.0.158",
@@ -27,6 +26,7 @@
     "expo-crypto": "~12.2.1",
     "expo-device": "~5.2.1",
     "expo-file-system": "~15.2.2",
+    "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-location": "~15.1.1",
     "expo-media-library": "~15.2.3",
