--- a/package.json
+++ b/package.json
@@ -9,56 +9,56 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@openforis/arena-core": "^0.0.162",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
-    "expo": "~48.0.18",
-    "expo-application": "~5.1.1",
-    "expo-asset": "~8.9.1",
-    "expo-camera": "~13.2.1",
-    "expo-crypto": "~12.2.1",
-    "expo-device": "~5.2.1",
-    "expo-file-system": "~15.2.2",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-location": "~15.1.1",
-    "expo-media-library": "~15.2.3",
-    "expo-sensors": "~12.1.1",
-    "expo-sharing": "~11.2.2",
-    "expo-sqlite": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-application": "~5.3.0",
+    "expo-asset": "~8.10.1",
+    "expo-camera": "~13.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-device": "~5.4.0",
+    "expo-file-system": "~15.4.3",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
+    "expo-media-library": "~15.4.1",
+    "expo-sensors": "~12.3.0",
+    "expo-sharing": "~11.5.0",
+    "expo-sqlite": "~11.3.2",
+    "expo-status-bar": "~1.6.0",
     "i18next": "^23.2.11",
     "lz-string": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
-    "react-native": "0.71.8",
+    "react-native": "0.72.4",
     "react-native-collapsible": "^1.6.1",
     "react-native-dots-pagination": "^0.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.1",
     "react-native-open-maps": "^0.4.3",
-    "react-native-pager-view": "^6.2.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.9.1",
     "react-native-paper-autocomplete": "^0.11.7",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-paper-select": "^1.0.2",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.1",
     "react-native-version-number": "^0.3.6",
     "react-native-view-more-text": "^2.2.0",
-    "react-native-web": "~0.18.10",
+    "react-native-web": "~0.19.6",
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
@@ -67,8 +67,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
+    "@babel/core": "^7.20.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.0.3"
   },
   "private": true
