--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "My Arena Mobile",
-    "slug": "my-arena-mobile",
+    "name": "MAM",
+    "slug": "mam",
     "owner": "stericcio",
-    "version": "0.9.26",
+    "version": "0.9.27",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -22,7 +22,7 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "org.stericcio.myarenamobile",
-      "versionCode": 26
+      "versionCode": 27
     },
     "ios": {
       "supportsTablet": true
