--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myarenamobile",
-  "version": "0.9.26",
+  "name": "mam",
+  "version": "0.9.27",
   "main": "AppEntry.js",
   "scripts": {
     "start": "expo start",
