updated arena-core dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mam",
-  "version": "0.9.27",
+  "name": "arena-mobile-experiments",
+  "version": "0.9.28",
   "main": "AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.162",
+    "@openforis/arena-core": "^0.0.169",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/datetimepicker": "7.2.0",
