--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-status-bar": "~1.6.0",
     "i18next": "^23.2.11",
     "lz-string": "^1.5.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
