Dependencies updates / edit code and taxon in dialog (#11)
* updated arena-core dependency

* changed application name

* layout adjustments

* layout adjustments

* code attribute: edit in dialog

* taxon attribute: edit in dialog

* keep scientific name for unknown species

* upgraded version number

* updated react-native-paper-autocomplete dependency

* solved sonarcloud issues

* solved sonarcloud issues

* solved sonarcloud issues

---------

Co-authored-by: Stefano Ricci <SteRiccio@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
-    "name": "MAM",
-    "slug": "mam",
+    "name": "Arena Mobile Experiments",
+    "slug": "my-arena-mobile",
     "owner": "stericcio",
-    "version": "0.9.27",
+    "version": "0.9.29",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -22,7 +22,7 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "org.stericcio.myarenamobile",
-      "versionCode": 27
+      "versionCode": 29
     },
     "ios": {
       "supportsTablet": true
