--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "arena-mobile-experiments",
-  "version": "0.9.30",
-  "main": "AppEntry.js",
+  "version": "0.9.31",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,13 +10,14 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.169",
+    "@openforis/arena-core": "^0.0.171",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.4.0",
     "expo": "^49.0.0",
     "expo-application": "~5.3.0",
@@ -63,7 +63,6 @@
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.1",
     "uuid": "^9.0.0"
   },
