--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-zip-archive": "^6.0.9",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
+    "rn-swipe-button": "^1.3.8",
     "socket.io-client": "^4.7.1",
     "uuid": "^9.0.0"
   },
