--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.2",
     "react-native": "0.72.5",
+    "react-native-check-version": "^1.1.1",
     "react-native-collapsible": "^1.6.1",
+    "react-native-device-info": "^10.11.0",
     "react-native-dots-pagination": "^0.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-error-boundary": "^1.2.3",
