--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "^49.0.16",
     "expo-application": "~5.3.0",
     "expo-asset": "~8.10.1",
+    "expo-battery": "~7.3.0",
     "expo-camera": "~13.4.4",
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
