--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arena-mobile-experiments",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.174",
+    "@openforis/arena-core": "^0.0.181",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/datetimepicker": "7.2.0",
@@ -18,9 +18,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
-    "expo": "^49.0.16",
+    "expo": "^49.0.21",
     "expo-application": "~5.3.0",
     "expo-asset": "~8.10.1",
+    "expo-battery": "~7.3.0",
     "expo-camera": "~13.4.4",
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
@@ -33,7 +34,7 @@
     "expo-sharing": "~11.5.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
-    "i18next": "^23.6.0",
+    "i18next": "^23.7.11",
     "lz-string": "^1.5.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -42,15 +43,15 @@
     "react-native": "0.72.6",
     "react-native-check-version": "^1.1.1",
     "react-native-collapsible": "^1.6.1",
-    "react-native-device-info": "^10.11.0",
+    "react-native-device-info": "^10.12.0",
     "react-native-dots-pagination": "^0.3.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-error-boundary": "^1.2.3",
+    "react-native-error-boundary": "^1.2.4",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.2",
     "react-native-open-maps": "^0.4.3",
     "react-native-pager-view": "6.2.0",
-    "react-native-paper": "^5.11.3",
+    "react-native-paper": "^5.11.4",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -68,10 +69,10 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.23.6",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.3.1"
   },
   "private": true
 }
