--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.181",
+    "@openforis/arena-core": "^0.0.182",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/datetimepicker": "7.2.0",
@@ -25,6 +25,7 @@
     "expo-camera": "~13.4.4",
     "expo-crypto": "~12.4.1",
     "expo-device": "~5.4.0",
+    "expo-document-picker": "~11.5.4",
     "expo-file-system": "~15.4.5",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
