--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arena-mobile-experiments",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -35,6 +35,7 @@
     "expo-sharing": "~11.5.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "i18next": "^23.7.11",
     "lz-string": "^1.5.0",
     "mime": "^4.0.1",
