fixes for iOS (permissions description)

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Arena Mobile Experiments",
     "slug": "my-arena-mobile",
     "owner": "stericcio",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -22,11 +22,18 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "org.stericcio.myarenamobile",
-      "versionCode": 49
+      "versionCode": 50
     },
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "org.stericcio.myarenamobile"
+      "bundleIdentifier": "org.stericcio.myarenamobile",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Camera is used only when collecting images in file attributes (if defined in your survey).",
+        "NSLocationWhenInUseUsageDescription": "Location is used only when collecting coordinates in coordinate attributes (if defined in your survey).",
+        "NSMicrophoneUsageDescription": "Microfone is used only when recording audio or video in file attributes (if defined in your survey).",
+        "NSMotionUsageDescription": "Devices's acceleraometer is used only when using the 'navigator' in coordinate attributes (if defined in your survey).",
+        "NSPhotoLibraryUsageDescription": "Access to the photo library is required only when selecting images to be used in file attributes (if defined in your survey)."
+      },
+      "supportsTablet": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
