--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
-    "expo": "^50.0.4",
+    "expo": "^50.0.7",
     "expo-application": "~5.8.3",
     "expo-asset": "~9.0.2",
     "expo-battery": "~7.7.2",
-    "expo-camera": "~14.0.3",
+    "expo-camera": "~14.0.5",
     "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.0",
+    "expo-crypto": "~12.8.1",
     "expo-device": "~5.9.3",
     "expo-document-picker": "~11.10.1",
-    "expo-file-system": "~16.0.5",
+    "expo-file-system": "~16.0.6",
     "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.2",
+    "expo-location": "~16.5.3",
     "expo-media-library": "~15.9.1",
     "expo-sensors": "~12.9.1",
     "expo-sharing": "~11.10.0",
@@ -44,7 +44,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.3.1",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-check-version": "^1.1.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-device-info": "^10.12.0",
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.3.1",
     "metro-react-native-babel-preset": "^0.77.0"
   },
