support landscape screen orientation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.3.1",
-    "@openforis/arena-core": "^0.0.183",
+    "@openforis/arena-core": "../../openforis/arena-core",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "^1.13.2",
     "@react-native-community/datetimepicker": "7.6.1",
@@ -32,6 +32,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.1",
+    "expo-screen-orientation": "~6.4.1",
     "expo-sensors": "~12.9.1",
     "expo-sharing": "~11.10.0",
     "expo-sqlite": "~13.4.0",
