--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "arena-mobile-experiments",
+  "name": "arena_mobile_experiments",
   "version": "1.0.14",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "windows": "react-native run-windows"
   },
   "dependencies": {
     "@expo/webpack-config": "~19.0.1",
@@ -64,6 +65,7 @@
     "react-native-version-number": "^0.3.6",
     "react-native-view-more-text": "^2.2.0",
     "react-native-web": "~0.19.10",
+    "react-native-windows": "0.73.11",
     "react-native-zip-archive": "^6.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
@@ -76,7 +78,8 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.4.5",
-    "metro-react-native-babel-preset": "^0.77.0"
+    "metro-react-native-babel-preset": "^0.77.0",
+    "metro-config": "^0.80.5"
   },
   "private": true,
   "packageManager": "yarn@4.0.2"
