--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
-    "@expo/metro-config": "^0.17.6",
+    "@react-native/metro-config": "0.75.0-main",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.4.5",
