--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@openforis/arena-core": "^0.0.187",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "^1.13.2",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
@@ -50,6 +50,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-device-info": "^10.13.0",
     "react-native-dots-pagination": "^0.3.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-error-boundary": "^1.2.4",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.3",
