--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,9 +1,9 @@
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.0.2.cjs
-
 npmScopes:
-  "openforis":
+  openforis:
     npmAlwaysAuth: true
-    npmAuthToken: ${NPM_TOKEN}
+    npmAuthToken: "${NPM_TOKEN}"
     npmRegistryServer: "https://npm.pkg.github.com"
+
+yarnPath: .yarn/releases/yarn-4.2.2.cjs
