--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.3.1",
     "@openforis/arena-core": "^0.0.189",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.13.2",
     "@react-native-community/datetimepicker": "^8.0.1",
-    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "@reduxjs/toolkit": "^2.2.1",
-    "expo": "^50.0.17",
-    "expo-application": "~5.8.4",
-    "expo-asset": "~9.0.2",
-    "expo-battery": "~7.7.2",
-    "expo-camera": "~14.1.3",
-    "expo-constants": "~15.4.6",
-    "expo-crypto": "~12.8.1",
-    "expo-device": "~5.9.4",
-    "expo-document-picker": "~11.10.1",
-    "expo-file-system": "~16.0.9",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-location": "~16.5.5",
-    "expo-media-library": "~15.9.2",
-    "expo-screen-orientation": "~6.4.1",
-    "expo-sensors": "~12.9.1",
-    "expo-sharing": "~11.10.0",
-    "expo-sqlite": "~13.4.0",
-    "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.14",
+    "expo-application": "~5.9.1",
+    "expo-asset": "~10.0.9",
+    "expo-battery": "~8.0.1",
+    "expo-camera": "~15.0.11",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-device": "~6.0.2",
+    "expo-document-picker": "~12.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.3",
+    "expo-screen-orientation": "~7.0.5",
+    "expo-sensors": "~13.0.8",
+    "expo-sharing": "~12.0.1",
+    "expo-sqlite": "~14.0.3",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "i18next": "^23.10.0",
     "lz-string": "^1.5.0",
     "mime": "^4.0.1",
@@ -46,7 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.0.5",
-    "react-native": "0.73.6",
+    "react-native": "0.74.2",
     "react-native-check-version": "^1.1.1",
     "react-native-collapsible": "^1.6.1",
     "react-native-device-info": "^10.13.0",
@@ -56,11 +56,11 @@
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.1.3",
     "react-native-open-maps": "^0.4.3",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.3",
     "react-native-paper-dropdown": "^1.0.7",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-side-drawer": "^2.1.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-version-number": "^0.3.6",
@@ -74,7 +74,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
+    "@babel/core": "^7.24.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.4.5",
