--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,5 @@ npmScopes:
     npmAlwaysAuth: true
     npmAuthToken: "${NPM_TOKEN}"
     npmRegistryServer: "https://npm.pkg.github.com"
+
+yarnPath: .yarn/releases/yarn-4.3.1.cjs
