--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-application": "~5.8.4",
     "expo-asset": "~9.0.2",
     "expo-battery": "~7.7.2",
+    "expo-build-properties": "~0.11.1",
     "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.6",
     "expo-crypto": "~12.8.1",
