--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@welldone-software/why-did-you-render": "^8.0.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "dotenv": "^16.4.5",
