--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-error-boundary": "^1.2.4",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.2.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-open-maps": "^0.4.3",
     "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
