--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arena-mobile-experiments",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "scripts": {
     "start": "expo start",
     "start-tunnel": "expo start --tunnel",
@@ -56,6 +56,7 @@
     "react-native-error-boundary": "^1.2.4",
     "react-native-final-tree-view": "^3.0.0",
     "react-native-keychain": "^8.2.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-open-maps": "^0.4.3",
     "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
