--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Arena Mobile Experiments",
     "slug": "my-arena-mobile",
     "owner": "stericcio",
-    "version": "1.1.12",
+    "version": "1.1.13",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -21,10 +21,10 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "org.stericcio.myarenamobile",
-      "versionCode": 76
+      "versionCode": 77
     },
     "ios": {
-      "buildNumber": "76",
+      "buildNumber": "77",
       "bundleIdentifier": "org.stericcio.myarenamobile",
       "infoPlist": {
         "LSMinimumSystemVersion": "13.0",
@@ -50,6 +50,15 @@
         {
           "ios": {
             "deploymentTarget": "15.5"
+          }
+        }
+      ],
+      [
+        "./plugins/modifyAndroidManifestAttributes",
+        {
+          "application": {
+            "android:hardwareAccelerated": "true",
+            "android:largeHeap": "true"
           }
         }
       ]
