--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
     "expo-screen-orientation": "~7.0.5",
+    "expo-secure-store": "~13.0.2",
     "expo-sensors": "~13.0.9",
     "expo-sharing": "~12.0.1",
     "expo-sqlite": "~14.0.6",
