updated version number

--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 3.7.2"
+    "appVersionSource": "local",
+    "version": ">= 13.1.1"
   },
   "build": {
     "development": {
