fixed date/time picker modal in iOS

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "owner": "stericcio",
     "version": "1.1.20",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
