Revert "fixed localization config"
This reverts commit fb88d16ec8ab702c340af8818e4ca100efec11d6.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@openforis/arena-core": "^1.0.5",
+    "@os-team/i18next-react-native-language-detector": "^1.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -33,7 +34,6 @@
     "expo-file-system": "~18.0.4",
     "expo-image-manipulator": "~13.0.5",
     "expo-image-picker": "~16.0.3",
-    "expo-localization": "^16.0.0",
     "expo-location": "~18.0.2",
     "expo-media-library": "~17.0.3",
     "expo-screen-orientation": "~8.0.0",
