updated localization confi (use expo-localization)

--- a/app.json
+++ b/app.json
@@ -14,7 +14,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -61,7 +63,8 @@
             "android:largeHeap": "true"
           }
         }
-      ]
+      ],
+      "expo-localization"
     ]
   }
 }
