--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@expo/webpack-config": "~19.0.1",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@openforis/arena-core": "^1.0.6",
-    "@os-team/i18next-react-native-language-detector": "^1.0.34",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/datetimepicker": "7.7.0",
@@ -34,6 +33,7 @@
     "expo-file-system": "~16.0.9",
     "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
+    "expo-localization": "~14.8.4",
     "expo-location": "~16.5.5",
     "expo-media-library": "~15.9.2",
     "expo-screen-orientation": "~6.4.1",
