adding translations (WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
-  }
+  },
+  "i18n-ally.localesPaths": ["src/localization"],
+  "i18n-ally.dirStructure": "dir"
 }
