fixed expo-assets configuration

--- a/app.json
+++ b/app.json
@@ -49,6 +49,12 @@
     },
     "plugins": [
       [
+        "expo-asset",
+        {
+          "assets": ["assets"]
+        }
+      ],
+      [
         "expo-build-properties",
         {
           "ios": {
