Dependencies: upgrade to expo 51 (#87)
* migrating to expo 51 (WIP)

* fixing record survey_id col type

* fixed download file error in expo 51

* fixed db migrations

* added expo-secure-store to store session cookie

* fixed SonarCloud issue

* updated dependencies

* fixed localization config

* code cleanup

* Revert "code cleanup"

This reverts commit 5e0fe24dc77d211dd02733f0d1deb9f1b873e076.

* Revert "fixed localization config"

This reverts commit fb88d16ec8ab702c340af8818e4ca100efec11d6.

* Revert "updated dependencies"

This reverts commit 61efe0108f077ac78adda47df6aa9d6a4855d51c.

* fixed expo dependencies

* updated eslint

* updated dependencies

* fixed expo-assets configuration

* renamed assets images

---------

Co-authored-by: Stefano Ricci <SteRiccio@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "assetBundlePatterns": ["**/*"],
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive_icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "org.stericcio.myarenamobile",
@@ -26,6 +26,9 @@
     "ios": {
       "buildNumber": "95",
       "bundleIdentifier": "org.stericcio.myarenamobile",
+      "config": {
+        "usesNonExemptEncryption": false
+      },
       "infoPlist": {
         "LSMinimumSystemVersion": "13.0",
         "NSCameraUsageDescription": "Camera is used only when collecting images in file attributes (if defined in your survey).",
@@ -46,6 +49,12 @@
     },
     "plugins": [
       [
+        "expo-asset",
+        {
+          "assets": ["assets"]
+        }
+      ],
+      [
         "expo-build-properties",
         {
           "ios": {
@@ -62,7 +71,9 @@
           }
         }
       ],
-      "expo-localization"
+      "expo-asset",
+      "expo-localization",
+      "expo-secure-store"
     ]
   }
 }
